design and alignment fix

--- a/src/components/ourWork/slider.css
+++ b/src/components/ourWork/slider.css
@@ -4,11 +4,25 @@
 /* css slider */
 .slider{
     width: 97vw;
-    height: 72vh;
+    height: 73vh;
     margin-top: 50px;
     position: relative;
     border-radius: 15px;
     left: 10px;
+    box-shadow: 0 0 10px 3px rgba(2, 27, 55, 0.8) ;
+
+
+}
+@media screen and (max-width: 600px) {
+    .slider{
+        width: 96vw;
+        height: 85vh;
+        margin-top: 50px;
+        position: relative;
+        border-radius: 15px;
+        left: 10px;
+        box-shadow: 0 0 10px 3px rgba(2, 27, 55, 0.8) ;
+    }
 }
 .slider .list .item{
     height: 100vh;
@@ -18,6 +32,23 @@
     overflow: hidden;
     opacity: 0;
     transition: .5s;
+    box-shadow: 0 0 10px 3px rgba(2, 27, 55, 0.8) ;
+
+}
+@media screen and (max-width: 600px) {
+
+    .slider .list .item{
+        height: 85vh;
+        width: 95;
+        position: absolute;
+        inset: 0 0 0 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: .5s;
+        box-shadow: #64748b;
+        box-shadow: 0 0 10px 3px rgba(2, 27, 55, 0.8) ;
+
+    }
 }
 .slider .list .item img{
     width: 100%;
@@ -97,6 +128,8 @@
     color: rgb(239, 230, 243);
     transition: 1s;
 }
+ 
+
 .prevarrows:hover{
     color:rgba(20, 183, 167, 0.89);
 }
@@ -139,7 +172,7 @@
 @media screen and (max-width: 600px) {
     .thumbnail {
         position: relative;
-        bottom: -30px;
+        bottom: 160px;
         z-index: 21;
         display: flex;
         gap: 10px;
